--- a/studentbrigade/pubspec.yaml
+++ b/studentbrigade/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -57,6 +58,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/aid1.jpg
+    - assets/images/aid2.jpg
+    - assets/images/aid3.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
