--- a/studentbrigade/android/app/src/main/AndroidManifest.xml
+++ b/studentbrigade/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
         android:label="studentbrigade"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+                    android:value="TU8_API_KEY_DE_GOOGLE_MAPS">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
