--- a/studentbrigade/pubspec.yaml
+++ b/studentbrigade/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
+  google_maps_flutter: ^2.10.0
+  geolocator: ^10.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
