--- a/studentbrigade/pubspec.yaml
+++ b/studentbrigade/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_map: ^8.2.2
   latlong2: ^0.9.1
   google_fonts: ^6.1.0
+  geolocator: ^10.1.0
+  http: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
