--- a/studentbrigade/pubspec.yaml
+++ b/studentbrigade/pubspec.yaml
@@ -31,13 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_map: ^8.2.2
+  connectivity_plus: ^6.0.3
   latlong2: ^0.9.1
   google_fonts: ^6.1.0
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  auth0_flutter: ^1.14.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +63,7 @@ flutter:
     - assets/images/aid1.jpg
     - assets/images/aid2.jpg
     - assets/images/aid3.jpg
+    - assets/images/logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
