--- a/studentbrigade/pubspec.yaml
+++ b/studentbrigade/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   http: ^1.1.0
   auth0_flutter: ^1.14.0
   shared_preferences: ^2.2.3
-
+  url_launcher: ^6.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
