--- a/studentbrigade/pubspec.yaml
+++ b/studentbrigade/pubspec.yaml
@@ -41,12 +41,12 @@ dependencies:
   http: ^1.1.0
   auth0_flutter: ^1.14.0
   shared_preferences: ^2.2.3
-
+  url_launcher: ^6.2.1
+  flutter_markdown: ^0.6.22
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  
 
 dev_dependencies:
   flutter_test:
