--- a/studentbrigade/pubspec.yaml
+++ b/studentbrigade/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   url_launcher: ^6.2.1
   ambient_light: ^0.1.4
 
+  # Firebase dependencies
+  firebase_core: ^4.1.1
+  firebase_auth: ^6.1.0
+  firebase_database: ^12.0.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
