--- a/studentbrigade/pubspec.yaml
+++ b/studentbrigade/pubspec.yaml
@@ -48,12 +48,12 @@ dependencies:
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
   firebase_database: ^12.0.2
+  firebase_analytics: ^12.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_markdown: ^0.7.7+1
-  
 
 dev_dependencies:
   flutter_test:
