--- a/studentbrigade/firebase.json
+++ b/studentbrigade/firebase.json
@@ -1,1 +1,34 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"brigadist-29309","appId":"1:993666193997:android:5eeccd257eb81ebdf89a04","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"brigadist-29309","configurations":{"android":"1:993666193997:android:5eeccd257eb81ebdf89a04"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "brigadist-29309",
+          "appId": "1:993666193997:android:5eeccd257eb81ebdf89a04",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "brigadist-29309",
+          "configurations": {
+            "android": "1:993666193997:android:5eeccd257eb81ebdf89a04"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ]
+    }
+  ]
+}
