--- a/studentbrigade/pubspec.yaml
+++ b/studentbrigade/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_map: ^8.2.2
+  flutter_map_tile_caching: ^10.1.1 
   provider: ^6.0.5
   video_player: ^2.9.2
   intl: ^0.20.2
