--- a/studentbrigade/pubspec.yaml
+++ b/studentbrigade/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   shared_preferences: ^2.2.3
   url_launcher: ^6.2.1
   ambient_light: ^0.1.4
+  flutter_video_info: ^1.1.4
+
+  cached_network_image: ^3.3.1
 
   # Firebase dependencies
   firebase_core: ^4.1.1
