--- a/studentbrigade/pubspec.yaml
+++ b/studentbrigade/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   url_launcher: ^6.2.1
   ambient_light: ^0.1.4
   flutter_video_info: ^1.1.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
   cached_network_image: ^3.3.1
 
