--- a/studentbrigade/pubspec.yaml
+++ b/studentbrigade/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - assets/images/aid2.jpg
     - assets/images/aid3.jpg
     - assets/images/logo.png
+    - lib/LocalStorage/gotita_donar.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
